--- a/docs/extra.css
+++ b/docs/extra.css
@@ -1,1 +1,9 @@
-.rst-content dl, .rst-content ul { font-size: 16px }
+.rst-content dl,
+.rst-content ul
+{
+	font-size: 16px
+}
+.wy-nav-content
+{
+	max-width: unset;
+}
